# OS-labs

./: CMakeLists.txt
laba1/: CMakeLists.txt  child  child.cpp  child.h  commands.txt  dilil  divider.cpp  divider.h  main.cpp  prov  tests
laba1/tests/: CMakeLists.txt  test.cpp
laba2/: CMakeLists.txt  cards.cpp  cards.h  main.cpp  strace_output.txt
laba2/tests/: CMakeLists.txt  test.cpp
laba3/: CMakeLists.txt  child.cpp  child.h  main  main.cpp  strace_output.txt  temp
laba3/tests/: CMakeLists.txt  test.cpp
laba4/: CMakeLists.txt  dynamicMain.cpp  lib1.cpp  lib1.h  lib2.cpp  lib2.h  main.cpp
laba4/tests/: CMakeLists.txt  test.cpp
laba5-7/: README.md  child.cpp  main.cpp  main.h  makefile  s_list.hpp
laba5-7/tests/: CMakeLists.txt
tests/: CMakeLists.txt  test1.cpp  tests.cpp
